@@ -8,6 +8,7 @@ This is a log of major user-visible changes in each phpMyFAQ release.
 Version 2.6.15 - 2011-02
 - updated Danish translation
 - updated Brazilian Portuguese translation
+- updated Spanish translation (Martin Schenk)
 - fixed minor bugs (Thorsten)
 
 Version 2.6.14 - 2011-01-24
